# foodbank

./: .deepsource.toml  .dockerignore  .gitignore  .stylelintrc  Dockerfile  README.md  build-app.sh  docker-compose.yml  get-requirements.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  run-app.sh  tailwind.config.js  tox.ini  wsgi.py
app/: app_factory.py  blueprints.py  configuration.py  extensions.py  middleware.py
app/contrib/: auth_helpers.py  sys_vars-1.0.0-py3-none-any.whl
app/core/: database.py  email.py  forms.py  helpers.py  redis.py
app/core/login/: __init__.py  password.py
app/core/models/: AuthUser.py  __init__.py
app/static/css/: components.css  style.css  template-style.css
app/static/js/: .gitadd  flash-messages.js
app/templates/: base.html
app/templates/checkin/: index.html
app/templates/emails/: reset-password.jinja2  reset-password.txt
app/templates/errors/: 403.html  404.html  500.html
app/templates/partials/: flash-message.jinja2  header.html  jodit-script.html  jodit-style.html  navbar.jinja2  simplepicker-script.html  (+2 more)
app/views/: checkin.py  records.py  root.py  special.py
configuration/: default.json  development.json  production.json
docs/: index.md
nginx/: lighthouse.conf
scripts/: create-user.py
sql/: 0-schema.sql  1-make_users_uuid_trigger.sql  1-sample-data.sql  2-make_clients_uuid_trigger.sql  reports_daily_summary_outline.txt
sql/queries/: user_create_new.sql  user_is_reset_token_valid.sql  user_load_full_info.sql  user_login.sql  user_record_login_time.sql  user_reset_password.sql
(+23 files in other folders)
