[tool.poetry]
name = "lighthouse"
version = "0.1.0"
description = "A check-in system for Lighthouse"
authors = ["Caleb Ely <le717@users.noreply.github.com>", "menmau <menmau@users.noreply.github.com>", "ryleegarrett <ryleegarrett@users.noreply.github.com>", "abigordon04 <abigordon04@users.noreply.github.com>", "Normantowne <Normantowne@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^19.10"
flask = "^1.1"
Flask-JSGlue = "^0.3.1"
Flask-WTF = "^0.14.2"
flask-login = "^0.4.1"
sys-vars = {path = "app/contrib/sys_vars-1.0.0-py3-none-any.whl"}
webargs = "^5.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
